_generated-doc/2.7/config/quarkus-hibernate-orm-hibernate-orm-runtime-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.database-database-related-configuration]]link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.database-database-related-configuration[Database related configuration]

h|Type
h|Default

a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.database.generation]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.database.generation[quarkus.hibernate-orm.database.generation]`

[.description]
--
Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. This defaults to 'none', however if Dev Services is in use and no other extensions that manage the schema are present this will default to 'drop-and-create'. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.
--|string 
|`none`


a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.database.generation.create-schemas]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.database.generation.create-schemas[quarkus.hibernate-orm.database.generation.create-schemas]`

[.description]
--
If Hibernate ORM should create the schemas automatically (for databases supporting them).
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.database.generation.halt-on-error]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.database.generation.halt-on-error[quarkus.hibernate-orm.database.generation.halt-on-error]`

[.description]
--
Whether we should stop on the first error when applying the schema.
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.database.default-catalog]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.database.default-catalog[quarkus.hibernate-orm.database.default-catalog]`

[.description]
--
The default catalog to use for the database objects.
--|string 
|


a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.database.default-schema]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.database.default-schema[quarkus.hibernate-orm.database.default-schema]`

[.description]
--
The default schema to use for the database objects.
--|string 
|


h|[[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.scripts-database-scripts-related-configuration]]link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.scripts-database-scripts-related-configuration[Database scripts related configuration]

h|Type
h|Default

a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.scripts.generation]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.scripts.generation[quarkus.hibernate-orm.scripts.generation]`

[.description]
--
Select whether the database schema DDL files are generated or not. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.
--|string 
|`none`


a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.scripts.generation.create-target]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.scripts.generation.create-target[quarkus.hibernate-orm.scripts.generation.create-target]`

[.description]
--
Filename or URL where the database create DDL file should be generated.
--|string 
|


a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.scripts.generation.drop-target]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.scripts.generation.drop-target[quarkus.hibernate-orm.scripts.generation.drop-target]`

[.description]
--
Filename or URL where the database drop DDL file should be generated.
--|string 
|


h|[[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.log-logging-configuration]]link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.log-logging-configuration[Logging configuration]

h|Type
h|Default

a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.log.sql]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.log.sql[quarkus.hibernate-orm.log.sql]`

[.description]
--
Show SQL logs and format them nicely. 
 Setting it to true is obviously not recommended in production.
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.log.format-sql]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.log.format-sql[quarkus.hibernate-orm.log.format-sql]`

[.description]
--
Format the SQL logs if SQL log is enabled
--|boolean 
|`true`


a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.log.jdbc-warnings]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.log.jdbc-warnings[quarkus.hibernate-orm.log.jdbc-warnings]`

[.description]
--
Whether JDBC warnings should be collected and logged.
--|boolean 
|`depends on dialect`


a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.log.queries-slower-than-ms]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.log.queries-slower-than-ms[quarkus.hibernate-orm.log.queries-slower-than-ms]`

[.description]
--
If set, Hibernate will log queries that took more than specified number of milliseconds to execute.
--|long 
|


h|[[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.persistence-units-additional-named-persistence-units]]link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.persistence-units-additional-named-persistence-units[Additional named persistence units]

h|Type
h|Default

h|[[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.database-database-related-configuration]]link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.database-database-related-configuration[Database related configuration]

h|Type
h|Default

a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.database.generation]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.database.generation[quarkus.hibernate-orm."persistence-unit-name".database.generation]`

[.description]
--
Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. This defaults to 'none', however if Dev Services is in use and no other extensions that manage the schema are present this will default to 'drop-and-create'. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.
--|string 
|`none`


a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.database.generation.create-schemas]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.database.generation.create-schemas[quarkus.hibernate-orm."persistence-unit-name".database.generation.create-schemas]`

[.description]
--
If Hibernate ORM should create the schemas automatically (for databases supporting them).
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.database.generation.halt-on-error]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.database.generation.halt-on-error[quarkus.hibernate-orm."persistence-unit-name".database.generation.halt-on-error]`

[.description]
--
Whether we should stop on the first error when applying the schema.
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.database.default-catalog]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.database.default-catalog[quarkus.hibernate-orm."persistence-unit-name".database.default-catalog]`

[.description]
--
The default catalog to use for the database objects.
--|string 
|


a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.database.default-schema]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.database.default-schema[quarkus.hibernate-orm."persistence-unit-name".database.default-schema]`

[.description]
--
The default schema to use for the database objects.
--|string 
|


h|[[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.scripts-database-scripts-related-configuration]]link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.scripts-database-scripts-related-configuration[Database scripts related configuration]

h|Type
h|Default

a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation[quarkus.hibernate-orm."persistence-unit-name".scripts.generation]`

[.description]
--
Select whether the database schema DDL files are generated or not. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.
--|string 
|`none`


a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation.create-target]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation.create-target[quarkus.hibernate-orm."persistence-unit-name".scripts.generation.create-target]`

[.description]
--
Filename or URL where the database create DDL file should be generated.
--|string 
|


a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation.drop-target]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation.drop-target[quarkus.hibernate-orm."persistence-unit-name".scripts.generation.drop-target]`

[.description]
--
Filename or URL where the database drop DDL file should be generated.
--|string 
|


h|[[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.log-logging-configuration]]link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.log-logging-configuration[Logging configuration]

h|Type
h|Default

a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.log.sql]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.log.sql[quarkus.hibernate-orm."persistence-unit-name".log.sql]`

[.description]
--
Show SQL logs and format them nicely. 
 Setting it to true is obviously not recommended in production.
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.log.format-sql]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.log.format-sql[quarkus.hibernate-orm."persistence-unit-name".log.format-sql]`

[.description]
--
Format the SQL logs if SQL log is enabled
--|boolean 
|`true`


a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.log.jdbc-warnings]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.log.jdbc-warnings[quarkus.hibernate-orm."persistence-unit-name".log.jdbc-warnings]`

[.description]
--
Whether JDBC warnings should be collected and logged.
--|boolean 
|`depends on dialect`


a| [[quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.log.queries-slower-than-ms]]`link:#quarkus-hibernate-orm-hibernate-orm-runtime-config_quarkus.hibernate-orm.-persistence-unit-name-.log.queries-slower-than-ms[quarkus.hibernate-orm."persistence-unit-name".log.queries-slower-than-ms]`

[.description]
--
If set, Hibernate will log queries that took more than specified number of milliseconds to execute.
--|long 
|

|===